Autosmooth option causes assert failure when selected #40074

Closed
opened 2014-05-07 21:46:27 +02:00 by Terry Wallwork · 17 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
I am using Blender GIT Rev 2014-05-07-20-28-46-3a8f1d5 on a Fedora 20 64 bit box.

I noticed that if I switch to the Cycles Render Engine in most recent build and
then open the [3D View Editor > Properties Region > Item Panel] and select the
Auto Smooth tickable option then Blender will seg fault.

Attached my system-info.txt file, blend test file and the backtrace file.

backtrace.txt

CyclesAutosmooth_Seg_Fault.blend

system-info.txt

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender GIT Rev 2014-05-07-20-28-46-3a8f1d5 on a Fedora 20 64 bit box. I noticed that if I switch to the Cycles Render Engine in most recent build and then open the [3D View Editor > Properties Region > Item Panel] and select the Auto Smooth tickable option then Blender will seg fault. Attached my system-info.txt file, blend test file and the backtrace file. [backtrace.txt](https://archive.blender.org/developer/F87644/backtrace.txt) [CyclesAutosmooth_Seg_Fault.blend](https://archive.blender.org/developer/F87643/CyclesAutosmooth_Seg_Fault.blend) [system-info.txt](https://archive.blender.org/developer/F87642/system-info.txt)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1

Added subscriber: @willi-2

Added subscriber: @willi-2

Cannot reproduce with blender-2.70-a351ff7-win64

Cannot reproduce with blender-2.70-a351ff7-win64
Bastien Montagne self-assigned this 2014-05-07 23:40:05 +02:00

Well, I can’t reproduce it either here (Debian64 testing, latest master), neither with release nor debug+asan…

Well, I can’t reproduce it either here (Debian64 testing, latest master), neither with release nor debug+asan…
Author

Ok since I posted the option has gone from the Properties Region area in the 3D Viewport.

It is still present in the Properties Editor > Object Data context > Normals Panel.

Pressing Auto Smooth in there crashes Blender for me (in both internal and cycles.)

This is with most recent build as of 13:35 may 8 2014

Updated backtrace for rev 2014-05-08-19-54-04-105aa67-x86_64 :

  • 0 0x0000003fe7035c39 in raise () from /lib64/libc.so.6
  • 1 0x0000003fe7037348 in abort () from /lib64/libc.so.6

2 0x00000000023e0d3d in dm_ensure_display_normals (dm=0x7fffe0001878)

  at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/DerivedMesh.c:1427

3 0x00000000023e1e65 in mesh_calc_modifiers (scene=0x6f1da38, ob=0x6f20368,

  inputVertexCos=0x0, deform_r=0x6f20870, final_r=0x6f20878, 
  useRenderParams=0, useDeform=1, needMapping=0, dataMask=637534233, 
  index=-1, useCache=1, build_shapekey_layers=0)
  at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/DerivedMesh.c:1888

4 0x00000000023e353b in mesh_build_data (scene=0x6f1da38, ob=0x6f20368,

  dataMask=637534233, build_shapekey_layers=0)
  at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/DerivedMesh.c:2241

5 0x00000000023e386a in makeDerivedMesh (scene=0x6f1da38, ob=0x6f20368,

  em=0x0, dataMask=637534233, build_shapekey_layers=0)
  at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/DerivedMesh.c:2314

6 0x000000000252aa75 in BKE_object_handle_update_ex (eval_ctx=0x6b16a68,

  scene=0x6f1da38, ob=0x6f20368, rbw=0x0, do_proxy_update=false)
  at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/object.c:2914
- Type <return> to continue, or q <return> to quit---

7 0x0000000002586cc7 in scene_update_object_func (pool=0x7efc638,

  taskdata=0x6a24138, threadid=3)
  at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/scene.c:1347

8 0x0000000002714a40 in task_scheduler_thread_run (thread_p=0x7e3aa88)

  at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenlib/intern/task.c:137
  • 9 0x0000003fe7407f33 in start_thread () from /lib64/libpthread.so.0
  • 10 0x0000003fe70f4ded in clone () from /lib64/libc.so.6
Ok since I posted the option has gone from the Properties Region area in the 3D Viewport. It is still present in the Properties Editor > Object Data context > Normals Panel. Pressing Auto Smooth in there crashes Blender for me (in both internal and cycles.) This is with most recent build as of 13:35 may 8 2014 Updated backtrace for rev 2014-05-08-19-54-04-105aa67-x86_64 : - 0 0x0000003fe7035c39 in raise () from /lib64/libc.so.6 - 1 0x0000003fe7037348 in abort () from /lib64/libc.so.6 # 2 0x00000000023e0d3d in dm_ensure_display_normals (dm=0x7fffe0001878) ``` at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/DerivedMesh.c:1427 ``` # 3 0x00000000023e1e65 in mesh_calc_modifiers (scene=0x6f1da38, ob=0x6f20368, ``` inputVertexCos=0x0, deform_r=0x6f20870, final_r=0x6f20878, useRenderParams=0, useDeform=1, needMapping=0, dataMask=637534233, index=-1, useCache=1, build_shapekey_layers=0) at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/DerivedMesh.c:1888 ``` # 4 0x00000000023e353b in mesh_build_data (scene=0x6f1da38, ob=0x6f20368, ``` dataMask=637534233, build_shapekey_layers=0) at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/DerivedMesh.c:2241 ``` # 5 0x00000000023e386a in makeDerivedMesh (scene=0x6f1da38, ob=0x6f20368, ``` em=0x0, dataMask=637534233, build_shapekey_layers=0) at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/DerivedMesh.c:2314 ``` # 6 0x000000000252aa75 in BKE_object_handle_update_ex (eval_ctx=0x6b16a68, ``` scene=0x6f1da38, ob=0x6f20368, rbw=0x0, do_proxy_update=false) at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/object.c:2914 ``` - Type <return> to continue, or q <return> to quit--- # 7 0x0000000002586cc7 in scene_update_object_func (pool=0x7efc638, ``` taskdata=0x6a24138, threadid=3) at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/scene.c:1347 ``` # 8 0x0000000002714a40 in task_scheduler_thread_run (thread_p=0x7e3aa88) ``` at /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenlib/intern/task.c:137 ``` - 9 0x0000003fe7407f33 in start_thread () from /lib64/libpthread.so.0 - 10 0x0000003fe70f4ded in clone () from /lib64/libc.so.6
Author

The above is for a default scene with default settings.

The above is for a default scene with default settings.

Yep, but unfortunately a backtrace won’t help that much here… :/

Anyway, option is still (since ages) in Mesh buttons, Normals panel (I removed it from 3DView from Campbell's request).

Yep, but unfortunately a backtrace won’t help that much here… :/ Anyway, option is still (since ages) in Mesh buttons, Normals panel (I removed it from 3DView from Campbell's request).

Do you use builds from the buildbot, or your own builds? If the later, could you please try with an official build? and what would be your compiler version?

Do you use builds from the buildbot, or your own builds? If the later, could you please try with an official build? and what would be your compiler version?

Added subscriber: @brecht

Added subscriber: @brecht

Are you compiling with WITH_ASSERT_ABORT enabled?

The abort in the backtrace indicates it's crashing on BLI_assert. And when running a debug build, I can indeed see a message

BLI_assert failed: /Users/brecht/dev/neo/blender/source/blender/blenkernel/intern/DerivedMesh.c:1427, dm_ensure_display_normals(), at 'CustomData_has_layer(&dm->polyData, CD_NORMAL) == 0'

But it does not actually crash unless WITH_ASSERT_ABORT is enabled in the cmake configuration, and it's disabled by default.

Are you compiling with WITH_ASSERT_ABORT enabled? The `abort` in the backtrace indicates it's crashing on `BLI_assert`. And when running a debug build, I can indeed see a message ``` BLI_assert failed: /Users/brecht/dev/neo/blender/source/blender/blenkernel/intern/DerivedMesh.c:1427, dm_ensure_display_normals(), at 'CustomData_has_layer(&dm->polyData, CD_NORMAL) == 0' ``` But it does not actually crash unless WITH_ASSERT_ABORT is enabled in the cmake configuration, and it's disabled by default.
Author

mont29: yes sorry I just noticed it was removed in logs, sorry about that.

mont29: I am using my own builds, i will try with build bot (assuming there is an uptodate enough version and report back).

I am using the following gcc version according to gcc -v:

[terry@localhost ~]$ gcc -v
Using built-in specs.
COLLECT_GCC=gcc
COLLECT_LTO_WRAPPER=/usr/libexec/gcc/x86_64-redhat-linux/4.8.2/lto-wrapper
Target: x86_64-redhat-linux
Configured with: ../configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info --with-bugurl=http://bugzilla.redhat.com/bugzilla --enable-bootstrap --enable-shared --enable-threads=posix --enable-checking=release --with-system-zlib --enable-__cxa_atexit --disable-libunwind-exceptions --enable-gnu-unique-object --enable-linker-build-id --with-linker-hash-style=gnu --enable-languages=c,c++,objc,obj-c++,java,fortran,ada,go,lto --enable-plugin --enable-initfini-array --enable-java-awt=gtk --disable-dssi --with-java-home=/usr/lib/jvm/java-1.5.0-gcj-1.5.0.0/jre --enable-libgcj-multifile --enable-java-maintainer-mode --with-ecj-jar=/usr/share/java/eclipse-ecj.jar --disable-libjava-multilib --with-isl=/builddir/build/BUILD/gcc-4.8.2-20131212/obj-x86_64-redhat-linux/isl-install --with-cloog=/builddir/build/BUILD/gcc-4.8.2-20131212/obj-x86_64-redhat-linux/cloog-install --with-tune=generic --with-arch_32=i686 --build=x86_64-redhat-linux
Thread model: posix
gcc version 4.8.2 20131212 (Red Hat 4.8.2-7) (GCC)

brecht: Yes I am using Debug builds, and assert abort is active (which is intentional I was told that asserts should be reported, as asserts should never trigger). Also it has never triggered before and has always worked with assert abort active.

Output on the cosole when it happens is :

Read new prefs: /home/terry/.config/blender/2.70/config/userpref.blend
found bundled python: /home/terry/BLENDERBINARIES/Blender-2.70-GIT2014-05-08-19-54-04-105aa67-x86_64-GNU-Linux/share/blender/2.70/python
BLI_assert failed: /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/DerivedMesh.c:1427, dm_ensure_display_normals(), at 'CustomData_has_layer(&dm->polyData, CD_NORMAL) == 0'
./blender: line 3: 9484 Aborted (core dumped) /home/terry/BLENDERBINARIES/Blender-2.70-GIT2014-05-08-19-54-04-105aa67-x86_64-GNU-Linux/bin/blender

So yes it looks like an abort/assert. I just assumed when it said core dump that was same as seg fault. I will make sure to highlight differently in reports in future.

mont29: yes sorry I just noticed it was removed in logs, sorry about that. mont29: I am using my own builds, i will try with build bot (assuming there is an uptodate enough version and report back). I am using the following gcc version according to gcc -v: [terry@localhost ~]$ gcc -v Using built-in specs. COLLECT_GCC=gcc COLLECT_LTO_WRAPPER=/usr/libexec/gcc/x86_64-redhat-linux/4.8.2/lto-wrapper Target: x86_64-redhat-linux Configured with: ../configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info --with-bugurl=http://bugzilla.redhat.com/bugzilla --enable-bootstrap --enable-shared --enable-threads=posix --enable-checking=release --with-system-zlib --enable-__cxa_atexit --disable-libunwind-exceptions --enable-gnu-unique-object --enable-linker-build-id --with-linker-hash-style=gnu --enable-languages=c,c++,objc,obj-c++,java,fortran,ada,go,lto --enable-plugin --enable-initfini-array --enable-java-awt=gtk --disable-dssi --with-java-home=/usr/lib/jvm/java-1.5.0-gcj-1.5.0.0/jre --enable-libgcj-multifile --enable-java-maintainer-mode --with-ecj-jar=/usr/share/java/eclipse-ecj.jar --disable-libjava-multilib --with-isl=/builddir/build/BUILD/gcc-4.8.2-20131212/obj-x86_64-redhat-linux/isl-install --with-cloog=/builddir/build/BUILD/gcc-4.8.2-20131212/obj-x86_64-redhat-linux/cloog-install --with-tune=generic --with-arch_32=i686 --build=x86_64-redhat-linux Thread model: posix gcc version 4.8.2 20131212 (Red Hat 4.8.2-7) (GCC) brecht: Yes I am using Debug builds, and assert abort is active (which is intentional I was told that asserts should be reported, as asserts should never trigger). Also it has never triggered before and has always worked with assert abort active. Output on the cosole when it happens is : Read new prefs: /home/terry/.config/blender/2.70/config/userpref.blend found bundled python: /home/terry/BLENDERBINARIES/Blender-2.70-GIT2014-05-08-19-54-04-105aa67-x86_64-GNU-Linux/share/blender/2.70/python BLI_assert failed: /home/terry/BLENDER-GIT/EXTERNALSOURCES/BLENDER/source/blender/blenkernel/intern/DerivedMesh.c:1427, dm_ensure_display_normals(), at 'CustomData_has_layer(&dm->polyData, CD_NORMAL) == 0' ./blender: line 3: 9484 Aborted (core dumped) /home/terry/BLENDERBINARIES/Blender-2.70-GIT2014-05-08-19-54-04-105aa67-x86_64-GNU-Linux/bin/blender So yes it looks like an abort/assert. I just assumed when it said core dump that was same as seg fault. I will make sure to highlight differently in reports in future.
Brecht Van Lommel changed title from Cycles Autosmooth option causes segfault when selected to Autosmooth option causes segfault when selected 2014-05-08 17:04:01 +02:00

Oki, see the issue now…

Oki, see the issue now…
Bastien Montagne changed title from Autosmooth option causes segfault when selected to Autosmooth option causes assert failure when selected 2014-05-08 17:32:42 +02:00

This issue was referenced by blender/blender-addons-contrib@5a8d7af642

This issue was referenced by blender/blender-addons-contrib@5a8d7af642d8770cfc8e3b120f7de021efa1cbb9

This issue was referenced by 5a8d7af642

This issue was referenced by 5a8d7af642d8770cfc8e3b120f7de021efa1cbb9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5a8d7af642.

Closed by commit 5a8d7af642.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40074
No description provided.