Fix T40074: Autosmooth option causes assert failure when selected.

No need to call `dm_ensure_display_normals()` when using loop normals,
poly/vert ones have already been computed!